infra/kubernetes/overlays/staging/hotel-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: hotel-service}
spec:
 template:
  spec:
   containers:
   - name: hotel-service
