infra/kubernetes/overlays/staging/remove-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: emtaf-demo-wireframe}
$patch: delete
---
apiVersion: v1
kind: Service
metadata: {name: emtaf-demo-wireframe}
$patch: delete
