infra/kubernetes/overlays/staging/remove-service-postgres.yaml
apiVersion: v1
kind: Service
metadata: {name: postgres, namespace: emtaf}
$patch: delete
