infra/kubernetes/overlays/staging/remove-service-redis.yaml
apiVersion: v1
kind: Service
metadata: {name: redis, namespace: emtaf}
$patch: delete
